# pr-review-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.demo  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent/: blog_graph.py  blog_state.py  graph.py  models.py  state.py
agent/nodes/: analyze.py  blog_guardrails.py  decide_next.py  fetch_diff.py  guardrails.py  plan_blog.py  pre_scan.py  read_pages.py  score_relevance.py  search.py  synthesize.py  write_blog.py
agent/tools/: fetch_page.py  github.py  injection_guard.py  secrets_scan.py  source_trust.py  tavily_search.py
api/: auth.py  main.py  metrics.py
api/routes/: feedback.py  research.py  review.py
cache/: semantic.py
demo/: app.py  blog_app.py
eval/: run_evals.py  scorer.py
eval/cases/: clean.json  logic.json  research.json  security.json
feedback/: store.py
tests/unit/: test_guardrails.py  test_injection_guard.py  test_models.py  test_secrets_scan.py
