[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "research-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-groq>=0.2",
    "langchain-community>=0.3",
    "langsmith>=0.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "redis>=5.2",
    "pydantic>=2.10",
    "slowapi>=0.1.9",
    "prometheus-fastapi-instrumentator>=7.0",
    "structlog>=24.4",
    "python-dotenv>=1.0",
    "httpx>=0.28",
    "tavily-python>=0.3",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "pip-audit>=2.7",
]
demo = [
    "streamlit>=1.40",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
